fix z-index bug in dateField

--- a/components/DateField/DateField.scss
+++ b/components/DateField/DateField.scss
@@ -1,6 +1,5 @@
 .date-field {
     position: relative;
-    z-index: 8;
     font-family: "PT Sans", sans-serif;
     box-sizing: border-box;
     padding-left: 9px;
@@ -41,6 +40,7 @@
 
     &__drop {
         position: absolute;
+        z-index: 9;
         top: 100%;
         left: 0;
         margin-top: 1px;
@@ -141,14 +141,14 @@
             border-color: #ddd;
         }
 
-        &_active {
-            background-color: #fff;
-            border-color: #ddd;
-        }
-
         &_current {
             background-color: #e2eaf0;
             border-color: #8aacc2;
+        }
+
+        &_active {
+            background-color: #fff;
+            border-color: #ddd;
         }
 
         &_old {
